--- a/templates/data/theme.tmpl
+++ b/templates/data/theme.tmpl
@@ -1,5 +1,7 @@
 <!-- theme.tmpl -->
 {{ define "theme" }}
+    --box-radius:   6px;
+    --animation:    0.2s;
 {{ if eq .Theme "dark" }}
     --bg-dark:      rgba(  0,  43,  54,   1);
     --bg-norm:      rgba(  7,  54,  66,   1);
