--- a/templates/data/upload.tmpl
+++ b/templates/data/upload.tmpl
@@ -1,34 +1,34 @@
 <!-- upload.tmpl -->
 {{ define "upload" }}
-    <div class="box">
-      <form action="{{ .Paths.Upload }}"
-            method="post"
-           enctype="multipart/form-data">
-        <input required type="file"
-                       class="selectFile"
-                       title="file to upload"
-                        name="file">
-        <br>
-        {{ if .Auth.Require.Upload }}
-          {{ template "auth" . }}
-        {{ end }}
-        <input type="number"
-              title="number of allowed downloads"
-              class="selectDownloads"
-               name="downloads"
-                min="1"
-               step="1"
-        placeholder="1">
-        <input type="text"
-              class="selectDuration"
-               name="duration"
-              title="expire file after duration"
-        placeholder="{{ .DefaultDuration }}">
-        <br>
-        <input type="submit"
-              class="selectSubmit"
-              title="upload selected file"
-              value="upload">
-      </form>
-    </div>
+  <div class="box">
+    <form action="{{ .Paths.Upload }}"
+          method="post"
+         enctype="multipart/form-data">
+      <input required type="file"
+                     class="selectFile"
+                      name="file"
+                     title="file to upload">
+      <br>
+      {{ if .Auth.Require.Upload }}
+        {{ template "auth" . }}
+      {{ end }}
+      <input type="number"
+            class="selectDownloads"
+              min="1"
+             name="downloads"
+             step="1"
+            title="number of allowed downloads"
+      placeholder="1">
+      <input type="text"
+            class="selectDuration"
+             name="duration"
+            title="expire file after duration"
+      placeholder="{{ .DefaultDuration }}">
+      <br>
+      <input type="submit"
+            class="selectSubmit"
+            title="upload selected file"
+            value="upload">
+    </form>
+  </div>
 {{ end }}
