--- a/templates/data/upload.tmpl
+++ b/templates/data/upload.tmpl
@@ -14,6 +14,7 @@
       {{ end }}
       <input type="number"
             class="selectDownloads"
+              max="9999"
               min="1"
              name="downloads"
              step="1"
