--- a/templates/data/themeSelect.tmpl
+++ b/templates/data/themeSelect.tmpl
@@ -2,8 +2,8 @@
 {{ define "themeSelect" }}
   <div class="dropdown">
   <form action="">
-    <select name="theme"
-           class="selectTheme">
+    <select class="selectTheme"
+             name="theme">
       <option value="">select theme</option>
       <option value="dark">dark</option>
       <option value="light">light</option>
@@ -20,8 +20,8 @@
       <option value="neon">neon</option>
       <option value="night">night</option>
     </select>
-    <button type="submit"
-           class="selectTheme">change theme</button>
+    <button class="selectTheme"
+             type="submit">change theme</button>
     </form>
   </div>
 {{ end }}
