--- a/templates/data/header.tmpl
+++ b/templates/data/header.tmpl
@@ -7,13 +7,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="{{ .Version.id }}-{{ .Version.vers }}">
     {{ if .Index.CSP }}
-    {{ template "csp" . }}
+    {{- template "csp" . -}}
     {{ end }}
     {{ if .Theme }}
     <link rel="stylesheet" type="text/css" href="/assets/style.css">
     <style>
       :root {
-        {{ template "theme" . }}
+        {{- template "theme" . }}
       }
     </style>
     {{ end }}
