get default download limit, tidy version footer

--- a/templates/data/download.tmpl
+++ b/templates/data/download.tmpl
@@ -8,10 +8,8 @@
                       name="name"
                placeholder="{{ .Index.Placeholder.Filename }}"
                      title="download file by name">
+      {{ if .Auth.Require.Download }} {{ template "auth" . }} {{ end }}
       <br>
-      {{ if .Auth.Require.Download }}
-      {{ template "auth" . }}
-      {{ end }}
       <input type="submit"
             class="selectSubmit"
             title="download requested file"
