--- a/templates/data/assets/style.css
+++ b/templates/data/assets/style.css
@@ -3,10 +3,6 @@
   box-sizing: border-box;
 }
 
-button, input, select {
-  transition: all var(--animation) ease;
-}
-
 body {
   background: linear-gradient(0deg, var(--bg-light) 0%, var(--bg-dark) 100%);
   background-attachment: fixed;
@@ -14,25 +10,15 @@ body {
   display: flex;
   flex-direction: column;
   font-family: "Open Sans", "Helvetica Neue", "Helvetica", "Arial", sans-serif;
-  font-size: 1rem;
+  font-size: 1em;
   margin: 0;
   padding: 0;
-}
-
-a:link, a:visited {
-  color: var(--fg-light);
-  text-decoration: none;
-}
-
-a:active, a:hover {
-  color: var(--fg-light);
-  text-decoration: underline;
 }
 
 .container {
   display: flex;
   justify-content: space-between;
-  padding: 10px;
+  padding: 1em;
 }
 
 .box {
@@ -52,10 +38,34 @@ a:active, a:hover {
 }
 
 .footer {
-  bottom: 10px;
+  bottom: 1em;
   position: fixed;
   text-align: center;
   width: 100%;
+}
+
+a:link, a:visited {
+  color: var(--fg-light);
+  text-decoration: none;
+}
+
+a:active, a:hover {
+  color: var(--fg-light);
+  text-decoration: underline;
+}
+
+button, input, select {
+  transition: all var(--animation) ease;
+}
+
+button[disabled] {
+  opacity: 0.5;
+  pointer-events: none;
+}
+
+button:focus, input:focus, select:focus {
+  outline: 1px solid var(--fg-light);
+  outline-offset: 2px;
 }
 
 button[type="submit"],
@@ -80,26 +90,6 @@ input[type="number"] {
   appearance: textfield;
 }
 
-.selectClear {
-  appearance: none;
-  display: inline-block;
-}
-
-.selectClear:checked {
-  background-color: var(--fg-light);
-  color: var(--bg-dark);
-}
-
-.selectClear::before {
-  content: "clear";
-  display: block;
-}
-
-.selectClear:hover {
-  background-color: var(--fg-light);
-  color: var(--bg-dark);
-}
-
 .message {
   color: var(--fg-light);
   border-bottom: 1px dotted var(--fg-light);
@@ -110,7 +100,7 @@ input[type="number"] {
 .message .owner {
   background-color: var(--bg-light);
   border-radius: var(--box-radius);
-  bottom: 2rem;
+  bottom: 2em;
   color: var(--fg-light);
   padding: 6px 0;
   position: absolute;
@@ -137,12 +127,12 @@ input[type="number"] {
   visibility: visible;
 }
 
-.selectClear, .selectDownloads, .selectDuration {
+.selectDownloads, .selectDuration, .selectPost {
   text-align: center;
   width: 4em;
 }
 
-.selectFile, .selectFilename, .selectToken, .selectRefresh {
+.selectClear, .selectFile, .selectFilename, .selectToken, .selectRefresh {
   width: 16em;
 }
 
@@ -155,7 +145,7 @@ input[type="number"] {
 }
 
 .selectTheme {
-  width: 12em;
+  width: 10em;
 }
 
 .selectClear:hover,
@@ -163,16 +153,13 @@ input[type="number"] {
 .selectDuration:hover,
 .selectFilename:hover,
 .selectMessage:hover,
+.selectPost:hover,
 .selectRefresh:hover,
 .selectSubmit:hover,
 .selectTheme:hover,
 .selectToken:hover,
+input[type="file"]:hover,
 input[type="file"]::file-selector-button:hover {
   background-color: var(--fg-light);
   color: var(--bg-dark);
-}
-
-button:focus, input:focus, select:focus {
-  outline: 1px solid var(--fg-light);
-  outline-offset: 2px;
 }
