patch templates for theme config

--- a/templates/data/footer.tmpl
+++ b/templates/data/footer.tmpl
@@ -10,7 +10,7 @@
           <br>up {{ .Uptime}} on {{ .Hostname }}
         </span>
       </div>
-      {{ if .ThemePick }} {{ template "themeSelect" }} {{ end }}
+      {{ if .Style.AllowPick }} {{ template "themeSelect" . }} {{ end }}
     </div>
   </body>
 </html>
