--- a/templates/data/header.tmpl
+++ b/templates/data/header.tmpl
@@ -8,12 +8,10 @@
     <meta name="description" content="{{ .Version.id }}-{{ .Version.vers }}">
     <title>{{ .Index.Title }}</title>
     {{ if .Index.CSP }} {{- template "csp" . -}} {{ end }}
-    {{ if .Theme }}
+    {{ if .Style.Theme }}
     <link rel="stylesheet" type="text/css" href="/assets/style.css">
     <style>
-      :root {
-        {{- template "theme" . }}
-      }
+      {{- template "theme" . }}
     </style>
     {{ end }}
   </head>
