--- a/templates/data/themeSelect.tmpl
+++ b/templates/data/themeSelect.tmpl
@@ -5,23 +5,13 @@
     <select class="selectTheme"
              name="theme">
       <option value="">select theme</option>
-      <option value="dark">dark</option>
-      <option value="light">light</option>
-      <option value="navy">navy</option>
-      <option value="rose">rose</option>
-      <option value="green">green</option>
-      <option value="lime">lime</option>
-      <option value="pink">pink</option>
-      <option value="gold">gold</option>
-      <option value="purple">purple</option>
-      <option value="lush">lush</option>
-      <option value="beach">beach</option>
-      <option value="dusk">dusk</option>
-      <option value="neon">neon</option>
-      <option value="night">night</option>
+      {{ range .Style.Available -}}
+      <option value="{{ . }}">{{ . }}</option>
+      {{ end }}
     </select>
     <button class="selectTheme"
-             type="submit">change theme</button>
-    </form>
+             type="submit">change theme
+    </button>
+  </form>
   </div>
 {{ end }}
