--- a/templates/data/footer.tmpl
+++ b/templates/data/footer.tmpl
@@ -3,11 +3,7 @@
     <div class="footer">
       <div class="message">{{ .Version.id }}
         <span class="owner">
-          <a href="https://github.com/drduh/gone">
-            {{ .Version.id }}-{{ .Version.vers }}</a>
-          <br>built by {{ .Version.user }} on {{ .Version.arch }} {{ .Version.os }}
-          <br>at {{ .Version.time }} using <a href="https://go.dev/">{{ .Version.go }}</a>
-          <br>up {{ .Uptime}} on {{ .Hostname }}
+        {{ template "version" . }}
         </span>
       </div>
       {{ if .Style.AllowPick }} {{ template "themeSelect" . }} {{ end }}
