--- a/templates/data/index.tmpl
+++ b/templates/data/index.tmpl
@@ -7,7 +7,10 @@
     {{ if .Paths.List }}      {{- template "list" . -}}      {{ end }}
   </div>
   <div class="container">
-    {{ if .Paths.Message }}   {{- template "message" . -}}   {{ end }}
+    {{ if .Paths.Message }}
+      {{- template "messagePost" . -}}
+      {{- template "messageRead" . -}}
+    {{ end }}
   </div>
 {{- template "footer" . -}}
 {{ end }}
