patch templates for multiple file upload

--- a/templates/data/list.tmpl
+++ b/templates/data/list.tmpl
@@ -8,12 +8,12 @@
       <div class="message">{{ .Name }}
         <span class="owner">{{ .Size }} ({{ .Owner.Address }})</span>
       </div>
-      {{ end }}
-      {{ end }}
       <br>
-      <input type="submit"
-            class="selectSubmit"
-            value="list">
+      {{ end }}
+      {{ end }}
+      <input class="selectSubmit"
+              type="submit"
+             value="list">
     </form>
   </div>
 {{ end }}
