consolidate message ui

--- a/templates/data/index.tmpl
+++ b/templates/data/index.tmpl
@@ -8,8 +8,7 @@
   </div>
   <div class="container">
     {{ if .Paths.Message }}
-      {{- template "messagePost" . -}}
-      {{- template "messageRead" . -}}
+      {{- template "message" . -}}
     {{ end }}
   </div>
 {{- template "footer" . -}}
