move form sizes to root

--- a/templates/data/theme.tmpl
+++ b/templates/data/theme.tmpl
@@ -3,6 +3,10 @@
     :root {
         --animation:    0.2s;
         --box-radius:   6px;
+        --width-small:  6em;
+        --width-medium: 12em;
+        --width-large:  18em;
+        --width-xlarge: 50em;
 {{ if eq .Theme "dark" }}
         --bg-dark:      rgba(  0,  43,  54,   1);
         --bg-norm:      rgba(  7,  54,  66,   1);
