--- a/templates/data/version.tmpl
+++ b/templates/data/version.tmpl
@@ -1,9 +1,9 @@
 <!-- version.tmpl -->
 {{ define "version" }}
           <a href="https://github.com/drduh/gone">
-            {{ .Version.id }}-{{ .Version.vers }}</a>
-          <br>built by {{ .Version.user }} on {{ .Version.host }} ({{ .Version.arch }}/{{ .Version.os }})
-          <br>from {{ .Version.path }}
-          <br>at {{ .Version.time }} using <a href="https://go.dev/">{{ .Version.go }}</a>
-          <br>up {{ .Uptime}} on {{ .Hostname }}
+            {{ .Version.id }}-{{ .Version.vers }}</a><br>
+          built by {{ .Version.user }} on {{ .Version.host }} ({{ .Version.arch }}/{{ .Version.os }})<br>
+          from {{ .Version.path }}<br>
+          at {{ .Version.time }} using <a href="https://go.dev/">{{ .Version.go }}</a><br>
+          up {{ .Uptime}} on {{ .Hostname }}
 {{ end }}
