--- a/assets/style.css
+++ b/assets/style.css
@@ -114,7 +114,7 @@ input[type="number"] {
 .message .owner::after {
   border-color: var(--fg-light) transparent transparent transparent;
   border-style: solid;
-  border-width: 6px;
+  border-width: var(--box-radius);
   content: "";
   left: 50%;
   margin-left: -5px;
@@ -129,23 +129,19 @@ input[type="number"] {
 
 .selectDownloads, .selectDuration, .selectPost {
   text-align: center;
-  width: 4em;
+  width: var(--width-small);
 }
 
 .selectClear, .selectFile, .selectFilename, .selectToken, .selectRefresh {
-  width: 16em;
+  width: var(--width-large);
 }
 
 .selectMessage {
-  width: 28em;
+  width: var(--width-xlarge);
 }
 
-.selectSubmit {
-  width: 18em;
-}
-
-.selectTheme {
-  width: 10em;
+.selectSubmit, selectTheme {
+  width: var(--width-medium);
 }
 
 .selectClear:hover,
