list uploaded files in table format

--- a/templates/data/index.tmpl
+++ b/templates/data/index.tmpl
@@ -1,11 +1,7 @@
 <!-- index.tmpl -->
 {{ define "index" }}
 {{- template "header" . -}}
-  <div class="container">
-    {{- template "files" . -}}
-  </div>
-  <div class="container">
-    {{- template "text" . -}}
-  </div>
+  <div class="container"> {{- template "files"  . -}} </div>
+  <div class="container"> {{- template "text"   . -}} </div>
 {{- template "footer" . -}}
 {{ end }}
