--- a/templates/data/theme.tmpl
+++ b/templates/data/theme.tmpl
@@ -1,11 +1,13 @@
 <!-- theme.tmpl -->
 {{ define "theme" }}
     :root {
-        --animation:    0.2s;
+        --animation:    250ms;
         --bg-animation: none;
         --bg-gradient:  linear-gradient(0deg, var(--bg-light) 0%, var(--bg-dark) 100%);
         --bg-size:      100%;
         --box-radius:   6px;
+        --box-radius:   0.4em;
+        --table-pad:    0.2em;
         --width-small:  6em;
         --width-medium: 12em;
         --width-large:  18em;
