--- a/assets/style.css
+++ b/assets/style.css
@@ -164,6 +164,10 @@ input[type="file"]::file-selector-button:hover {
   color: var(--bg-dark);
 }
 
+input[type="radio"] {
+  display: none;
+}
+
 table {
   border-collapse: collapse;
   border-radius: var(--box-radius);
@@ -197,7 +201,14 @@ tr:nth-child(odd) {
   background-color: var(--bg-dark);
 }
 
-tr:hover {
+.list-row label {
+  display: block;
+  height: 100%;
+  width: 100%;
+}
+
+tr:hover,
+.list-row:has(input[type="radio"]:checked) {
   background-color: var(--bg-light);
   transition: background-color var(--animation) ease;
 }
