--- a/templates/data/message.tmpl
+++ b/templates/data/message.tmpl
@@ -6,7 +6,7 @@
           method="post">
       <input class="selectMessage"
               name="message"
-         maxlength="{{ .Limits.MsgChars }}"
+         maxlength="{{ .Limits.CharsMsg }}"
        placeholder="{{ .Index.Placeholder.Message }}"
               type="text">
       {{ if .Auth.Require.Message }} {{ template "auth" . }} {{ end }}
