--- a/templates/data/selectTheme.tmpl
+++ b/templates/data/selectTheme.tmpl
@@ -10,7 +10,7 @@
         {{ end }}
       </select>
       <button class="selectTheme"
-               type="submit">change theme</button>
+               type="submit">apply theme</button>
     </form>
   </div>
 {{ end }}
