trim wall form input, enforce char limit

--- a/templates/data/theme.tmpl
+++ b/templates/data/theme.tmpl
@@ -10,7 +10,7 @@
         --width-small:  6em;
         --width-medium: 12em;
         --width-large:  18em;
-        --width-xlarge: 50em;
+        --width-xlarge: 80%;
 
 {{ if eq .Theme "dark" }}
         --bg-dark:      rgba(  0,  43,  54,   1);
