configure no files available message

--- a/templates/data/list.tmpl
+++ b/templates/data/list.tmpl
@@ -48,7 +48,7 @@
              value="download">
     </form>
     {{ else }}
-    <p>no files available</p>
+    <p>{{ .NoFiles }}</p>
     {{ end }}
   </div>
 {{ end }}
