--- a/templates/data/upload.tmpl
+++ b/templates/data/upload.tmpl
@@ -15,7 +15,7 @@
              name="downloads"
              step="1"
             title="number of allowed downloads"
-      placeholder="{{ .Limits.Downloads }}">
+      placeholder="{{ .Default.Downloads }}">
       <input type="text"
             class="selectDuration"
              name="duration"
