--- a/templates/data/wall.tmpl
+++ b/templates/data/wall.tmpl
@@ -8,7 +8,7 @@
       <textarea class="wallContent"
                  form="wall"
                    id="wall"
-            maxlength="{{ .Limits.CharsWall }}"
+            maxlength="{{ .Limit.CharsWall }}"
                  name="wall"
                  cols="40" rows="12">
       {{- .Storage.WallContent -}}
