tidy list template

--- a/templates/data/auth.tmpl
+++ b/templates/data/auth.tmpl
@@ -3,7 +3,7 @@
   <br>
   <input class="selectToken"
           name="{{ .Auth.Basic.Field }}"
-   placeholder="{{ .Index.Placeholder.Auth }}"
+   placeholder="{{ .Placeholder.Auth }}"
          title="authentication required"
           type="text" required>
 {{ end }}
