combined file size/length method

--- a/templates/data/list.tmpl
+++ b/templates/data/list.tmpl
@@ -39,7 +39,7 @@
           </td>
           <td> <label for="{{ .Name }}">{{ .Size }}</label>          </td>
           <td> <label for="{{ .Name }}">{{ .Type }}</label>          </td>
-          <td> <label for="{{ .Name }}">{{ .Owner.Address }}</label> </td>
+          <td> <label for="{{ .Name }}">{{ .Owner.Mask }}</label>    </td>
           <td> <label for="{{ .Name }}">{{ .Time.Remain }}</label>   </td>
         </tr>
         {{ end }}
