--- a/templates/data/message.tmpl
+++ b/templates/data/message.tmpl
@@ -16,7 +16,7 @@
     </form>
     {{ range .Storage.Messages }}
     <div class="message"><b>{{ .Count }}</b> {{ .Data }}
-      <span class="owner">{{ .Owner.Address }} at {{ .Time.Allow }}</span>
+      <span class="owner">{{ .Owner.Mask }} at {{ .Time.Allow }}</span>
     </div>
     <br>
     {{ end }}
