allow download by id, use hex

--- a/templates/data/list.tmpl
+++ b/templates/data/list.tmpl
@@ -31,16 +31,16 @@
         {{ range .Storage.Files }}
         <tr class="list-row">
           <td>
-            <label for="{{ .Name }}">{{ .Name }}</label>
-            <input id="{{ .Name }}"
+            <label for="{{ .Id }}">{{ .Name }}</label>
+            <input id="{{ .Id }}"
                  name="name"
                  type="radio"
-                value="{{ .Name }}" required>
+                value="{{ .Id }}" required>
           </td>
-          <td> <label for="{{ .Name }}">{{ .Size }}</label>          </td>
-          <td> <label for="{{ .Name }}">{{ .Type }}</label>          </td>
-          <td> <label for="{{ .Name }}">{{ .Owner.Mask }}</label>    </td>
-          <td> <label for="{{ .Name }}">{{ .Time.Remain }}</label>   </td>
+          <td> <label for="{{ .Id }}">{{ .Size }}</label>          </td>
+          <td> <label for="{{ .Id }}">{{ .Type }}</label>          </td>
+          <td> <label for="{{ .Id }}">{{ .Owner.Mask }}</label>    </td>
+          <td> <label for="{{ .Id }}">{{ .Time.Remain }}</label>   </td>
         </tr>
         {{ end }}
         </tbody>
