--- a/assets/style.css
+++ b/assets/style.css
@@ -46,17 +46,21 @@ body {
   width: 100%;
 }
 
-a:link, a:visited {
+a:link,
+a:visited {
   color: var(--fg-light);
   text-decoration: none;
 }
 
-a:active, a:hover {
+a:active,
+a:hover {
   color: var(--fg-light);
   text-decoration: underline;
 }
 
-button, input, select {
+button,
+input,
+select {
   transition: all var(--animation) ease;
 }
 
@@ -65,7 +69,9 @@ button[disabled] {
   pointer-events: none;
 }
 
-button:focus, input:focus, select:focus {
+button:focus,
+input:focus,
+select:focus {
   outline: 1px solid var(--fg-light);
   outline-offset: 2px;
 }
@@ -130,12 +136,18 @@ input[type="number"] {
   visibility: visible;
 }
 
-.selectDownloads, .selectDuration, .selectPost {
+.selectDownloads,
+.selectDuration,
+.selectPost {
   text-align: center;
   width: var(--width-small);
 }
 
-.selectClear, .selectFile, .selectFilename, .selectToken, .selectRefresh {
+.selectClear,
+.selectFile,
+.selectFilename,
+.selectToken,
+.selectRefresh {
   width: var(--width-large);
 }
 
@@ -143,7 +155,8 @@ input[type="number"] {
   width: var(--width-xlarge);
 }
 
-.selectSubmit, selectTheme {
+.selectSubmit,
+.selectTheme {
   width: var(--width-medium);
 }
 
@@ -180,7 +193,8 @@ td {
   color: var(--fg-light);
 }
 
-td, th {
+td,
+th {
   padding: var(--table-pad);
   text-align: center;
 }
