--- a/templates/data/theme.tmpl
+++ b/templates/data/theme.tmpl
@@ -7,10 +7,11 @@
         --bg-size:      100%;
         --box-radius:   0.4em;
         --table-pad:    0.2em;
+        --width-xsmall: 4em;
         --width-small:  6em;
-        --width-medium: 12em;
-        --width-large:  18em;
-        --width-xlarge: 80%;
+        --width-medium: 8em;
+        --width-large:  10em;
+        --width-xlarge: 18em;
 
 {{ if eq .Theme "dark" }}
         --bg-dark:      rgba(  0,  43,  54,   1);
